css/style.css
/* ... */
.weOffer {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
}

.weOffer span {
  font-size: 16px;
  font-weight: 400;
}

.aboutUs {
  font-size: 16px;
  font-weight: 400;
  text-decoration: none;
  color: white;
}
.w-6 {
  width: 15px;
}

.h-6 {
  width: 15px;
}

.getStartedBtn {
  background-color: #abdeff;
  padding: 12px 24px 12px 24px;
  border-radius: 5px;
  border: 1px solid #abdeff;
  font-size: 16px;
  font-weight: 500;
}

.heroSection {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 64px;
  padding: 80px 110px 80px 110px;
  background-color: black;
}

.heroSectionTitle {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
}

.heroSectionTitle h1 {
  color: white;
  font-size: 64px;
  font-weight: 500;
}

.heroSectionTitle span {
  color: white;
  font-size: 24px;
  font-weight: 400;
  font-family: "inter";
}

.heroBtn {
  display: flex;
  gap: 16px;
  justify-content: space-between;
}

.gallaryCard {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  cursor: pointer;
  height: 520px;

  /* opacity: 0; */
  /* transform: scale(0.9); */
  /* transition: opacity 0.5s, transform 0.5s; */
}

/* .gallaryCard.visible {
  opacity: 1;
  transform: scale(1);
} */

.gallaryCard img:hover + .gallaryHover {
  display: flex;
}

.gallaryCard img:hover{ 
transform: translateY(10px);
}

.gallaryHover {
  /* border: 1px solid red; */
  display: none;
  justify-content: space-between;
  align-items: end;
  padding: 24px;
  width: 320px;
  height: 100px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  background-color: white;
  position: relative;
  top: -90px;
  bottom: 0px;
  left: 0;

}

.gallary {
  background-color: black;
  max-height: fit-content;
  /* height: 800px; */
  /* position: relative; */
}

.wrapper {
  width: 100%;
  /* max-width: 1440px; */
  display: flex;
  gap: 8px;
  width: calc(300px * 12);
  animation: scroll 40s linear infinite;
}

@keyframes scroll{
  0%{
    transform:translateX(0)
  }
  100%{
    transform: translateX(calc(-300px * 6));
  }
}

.gallaryInfor {
  display: flex;
  flex-direction: column;
  gap: 16px;
  /* border: 1px solid red; */
}

.arrow {
  width: 24px;
  height: 24px;
  float: inline-end;
}

.howCanWeHelp {
  display: flex;
  flex-direction: column;
  padding: 80px 110px 56px 110px;
  gap: 40px;
  align-items: center;
  justify-content: center;
  background-color: #f8f8f8;
}

.howCAn {
  display: flex;
  flex-direction: column;
  gap: 24px;
  align-items: center;
  justify-content: center;
}

.howCAn h3 {
  font-size: 40px;
  font-weight: 500;
}
.howCAn p {
  font-size: 20px;
  font-weight: 400;
  /* border: 1px solid black; */
  text-align: center;
  max-width: 750px;
  line-height: 32px;
}
.howCanBtn {
  display: flex;
  gap: 16px;
}

.howCanBtnOne {
  display: flex;
  gap: 16px;
}

.howCanBtnTwo {
  display: flex;
  gap: 16px;
}

.accomodadtionBtn {
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
  /* padding: 3px 0px 3px 0px; */
  background-color: #abdeff;
  font-size: 16px;
  font-weight: 400;
  height: 56px;
  width: 200px;
  border: none;
}

.howCanBtns {
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
  padding: 12px 24px 12px 24px;
  height: 56px;
  width: 200px;
  background-color: white;
  border: none;
  font-size: 16px;
  font-weight: 400;
}

.touristBtns {
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
  padding: 12px 24px 12px 24px;
  height: 56px;
  width: 212px;
  background-color: white;
  border: none;
  font-size: 16px;
  font-weight: 400;
}

.touristBtns img {
  width: 24px;
  height: 24px;
}

.howCanBtns img {
  width: 24px;
  height: 24px;
}

.search {
  display: flex;
  gap: 8px;
  border: 1.5px solid #ebeceb;
  padding: 12px 16px 12px 16px;
  background-color: white;
  border-radius: 4px;
  width: 500px;
}

.search svg {
  width: 13px;
  height: 13px;
}

.search input {
  border: none;
  outline: none;
  width: 500px;
}

.touristSite {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 80px;
  padding: 40px 110px 80px 110px;
  background-color: #f8f8f8;
}

.touristSiteDetails {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  flex-direction: column;
  gap: 24px;
}

.div {
  /* padding: 16px; */
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: white;
  display: flex;
  border-radius: 8px;
  gap: 24px;
  flex-direction: column;
  /* align-items: center;
    justify-content: center; */
}

.siteInfor {
  display: flex;
  gap: 14px;
  flex-direction: column;
}

.siteInfor p {
  display: flex;
  font-size: 14px;
  /* border:1px solid red; */
}

.siteInfor a {
  display: flex;
  align-items: center;
  /* justify-content: center; */
  gap: 6px;
  text-decoration: none;
}

.div img {
  height: 150px;
  width: 230px;
}

.loadMore {
  background-color: #abdeff;
  padding: 12px 24px 12px 24px;
  outline: none;
  border: none;
  border-radius: 5px;
  font-size: 16px;
  font-family: "DM Sans";
  font-weight: 500;
}

.serviceCardWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 110px 140px 110px 140px;
  gap: 64px;
  background-color: black;
}

.serviceTitle {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 24px;
  color: white;
}

.serviceTitle h3 {
  font-size: 40px;
  font-weight: 500;
}

.largeViewService {
  font-size: 20px;
  font-weight: 400;
}

.mobileViewService {
  display: none;
}
.serviceCards {
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  justify-content: center;
  gap: 32px;
  /* border: 1px solid red; */
  width: 100%;
  max-width: 1000px;
}
/* ... */

